[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/sections/json_section/JsonSection.gd" type="Script" id=1]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/settings_editors/SettingsBoolUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/eh_jogos.docs-exporter/shared_variables/string_array_directories.tres" type="Resource" id=3]
[ext_resource path="res://addons/eh_jogos.docs-exporter/shared_variables/string_json_export_path.tres" type="Resource" id=4]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/string_line_edit/StringLineEdit.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/settings_editors/SettingsPathSystemFile.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/eh_jogos.docs-exporter/shared_variables/string_array_filters.tres" type="Resource" id=7]
[ext_resource path="res://addons/eh_jogos.docs-exporter/shared_variables/bool_is_recursive_scan.tres" type="Resource" id=8]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/string_line_edit/PathDirectoryLineEdit.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/editor_button_theme.tres" type="Theme" id=12]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/settings_editors/SettingsStringArrayUi.tscn" type="PackedScene" id=13]

[node name="JsonSection" type="VBoxContainer"]
margin_right = 1018.0
margin_bottom = 216.0
custom_constants/separation = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "directories", "filters", "is_recursive", "save_path" ), [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ) ] ]

[node name="SectionTitle" type="Label" parent="."]
margin_right = 1018.0
margin_bottom = 14.0
text = "JSON Reference Parameters"

[node name="SectionTitleBG" type="ColorRect" parent="SectionTitle"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 1, 1, 0.121569 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="DirectoriesRow" type="HBoxContainer" parent="."]
margin_top = 22.0
margin_right = 1018.0
margin_bottom = 79.0

[node name="Label" type="Label" parent="DirectoriesRow"]
margin_right = 507.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Directories to scan"
valign = 1

[node name="DirectoriesColum" parent="DirectoriesRow" instance=ExtResource( 13 )]
margin_bottom = 57.0
_editor_field_packed_scene = ExtResource( 9 )

[node name="FiltersRow" type="HBoxContainer" parent="."]
margin_top = 87.0
margin_right = 1018.0
margin_bottom = 138.0

[node name="Label" type="Label" parent="FiltersRow"]
margin_right = 507.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Patterns to filter files"
valign = 1

[node name="FilterColumn" parent="FiltersRow" instance=ExtResource( 13 )]
margin_bottom = 51.0
_editor_field_packed_scene = ExtResource( 5 )
property = "filters"

[node name="RecursiveRow" type="HBoxContainer" parent="."]
margin_top = 146.0
margin_right = 1018.0
margin_bottom = 170.0

[node name="Label" type="Label" parent="RecursiveRow"]
margin_right = 507.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Should scan directories recursively"
valign = 1

[node name="IsRecursive" parent="RecursiveRow" instance=ExtResource( 2 )]
text = "On"

[node name="JsonReferenceRow" type="HBoxContainer" parent="."]
margin_top = 178.0
margin_right = 1018.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="JsonReferenceRow"]
margin_right = 507.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3
text = "Json reference export file path"
valign = 1

[node name="SettingsPathSystemFile" parent="JsonReferenceRow" instance=ExtResource( 6 )]

[node name="ExportJson" type="Button" parent="."]
margin_left = 768.0
margin_top = 208.0
margin_right = 1018.0
margin_bottom = 237.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 8
theme = ExtResource( 12 )
text = "Generate Json Reference"

[connection signal="pressed" from="ExportJson" to="." method="_on_ExportJson_pressed"]
